fixed option in drop down menu not showing up in email.

--- a/bergfurniturepets.com/css/style_pet.css
+++ b/bergfurniturepets.com/css/style_pet.css
@@ -744,6 +744,7 @@ a.disabled {
 	border: 3px solid #9F9;
 	border-radius: 15px;
 	text-align: center;
+	margin:0 auto;
 }
 
 .MsgSent h2 {
